--- a/index.html
+++ b/index.html
@@ -3,92 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Resume</title>
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="favicon/site.webmanifest" />
+    <title>RESUME</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
-      <!-- Header Section -->
-      <header class="header">
-        <div class="logo">GOPI <strong>KYADA</strong></div>
-        <nav class="nav">
-          <a href="#">PROJECTS</a>
-          <a href="#">ABOUT</a>
-          <a href="#">CONTACT</a>
-        </nav>
-      </header>
+    <!-- TOP NAVIGATION BAR -->
+    <nav class="navbar flex">
+      <div class="nav-name">
+        <p>Gopi <span class="bold-text-orange">Kyada</span></p>
+      </div>
+      <div class="header-nav flex">
+        <a href="#">Projects</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </div>
+    </nav>
 
-      <!-- Main Grid -->
-      <div class="grid">
-        <!-- Text Section -->
-        <div class="grid-item text-box">
-          <h1>
-            Artist Redefining <em>Architecture</em> with
-            <strong>AI-Driven Design</strong>
-          </h1>
+    <!-- MAIN PART -->
+
+    <main class="flex">
+      <div class="flex-first">
+        <!-- ABOUT MY PROFESSION section -->
+        <div class="about-profession-text flex">
+          <p>Artist Redefining Architecture with AI-Driven Design</p>
+        </div>
+        <div class="myimage-container">
+          <!-- MY IMAGE -->
+          <img src="images/my_image.png" alt="My Image" />
         </div>
 
-        <!-- Profile Image -->
-        <div class="grid-item profile-image">
-          <img src="images/profile.jpg" alt="Profile Picture" />
-        </div>
-
-        <!-- Project Section -->
-        <div class="grid-item project-section">
-          <div class="project-image">
-            <img src="images/project.png" alt="Project Image" />
-          </div>
-          <ul class="skills-container">
-            <li class="skills">SKILLS</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Figma</li>
-          </ul>
-        </div>
-
-        <!-- Bio Section -->
-        <div class="grid-item bio">
-          <p class="bio-header">BIO</p>
+        <!-- ABOUT ME -->
+        <div class="about-me flex">
           <p>
             Gopi Kyada is an innovative AI artist, renowned for blending
             cutting-edge technology with creative expression. Based in LA, she
             crafts unique digital art experiences accessible globally.
           </p>
         </div>
-
-        <!-- Contact Section -->
-        <div class="grid-item contact">
-          <p>Have some questions?</p>
-          <a href="#" class="contact-button">Contact me</a>
+        <!-- CONTACT ME -->
+        <div class="contact-me flex">
+          <a href="#">Have some questions?</a>
+          <a href="" class="contact-me-text bold-text-orange">Contact me</a>
         </div>
       </div>
-
-      <!-- Footer Section -->
-      <footer class="footer">
-        <a href="#">INSTAGRAM</a>
-        <a href="#">TWITTER</a>
-        <a href="#">LINKEDIN</a>
-      </footer>
-    </div>
+      <!-- MUSEA -->
+      <section class="flex-second">
+        <div class="skills-container">
+          <p>Skills</p>
+          <img src="images/second_image.png" alt="Skills" />
+          <ul class="list">
+            <li>Adobe XD</li>
+            <li>Photoshop</li>
+            <li>Premier Pro</li>
+            <li>Adobe illustrator</li>
+            <li>Figma</li>
+          </ul>
+        </div>
+        <div class="social-media flex">
+          <a href="#">Instagram</a>
+          <a href="#">Twitter</a>
+          <a href="#">Facebook</a>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
