--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="myimage-container">
           <!-- MY IMAGE -->
-          <img src="images/my_image.png" alt="My Image" />
+          <img src="images/profilr.jpg" alt="My Image" />
         </div>
 
         <!-- ABOUT ME -->
@@ -68,7 +68,7 @@
       <section class="flex-second">
         <div class="skills-container">
           <p>Skills</p>
-          <img src="images/second_image.png" alt="Skills" />
+          <img src="images/project.png" alt="Skills" />
           <ul class="list">
             <li>Adobe XD</li>
             <li>Photoshop</li>
