--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="myimage-container">
           <!-- MY IMAGE -->
-          <img src="images/profilr.jpg" alt="My Image" />
+          <img src="images/profile.jpg" alt="My Image" />
         </div>
 
         <!-- ABOUT ME -->
