--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Resume</title>
-     <link
+    <link
       rel="apple-touch-icon"
       sizes="180x180"
       href="favicon/apple-touch-icon.png"
@@ -23,12 +23,14 @@
     />
     <link rel="manifest" href="favicon/site.webmanifest" />
     <link rel="stylesheet" href="styles.css" />
+    <!-- <link rel="stylesheet" href="media-query.css" /> -->
+    <link rel="stylesheet" href="media-queries.css" />
   </head>
   <body>
     <!-- TOP NAVIGATION BAR -->
     <nav class="navbar flex">
       <div class="nav-name">
-        <p>Gopi <span class="bold-text-orange">Kyada</span></p>
+        <p>Gopi <span class="bold">Kyada</span></p>
       </div>
       <div class="header-nav flex">
         <a href="#">Projects</a>
@@ -43,7 +45,11 @@
       <div class="flex-first">
         <!-- ABOUT MY PROFESSION section -->
         <div class="about-profession-text flex">
-          <p>Artist Redefining Architecture with AI-Driven Design</p>
+          <p>
+            <span class="bold">Artist Redefining </span>
+            <span class="italic"> Architecture</span>
+            <span class="bold">with AI-Driven Design</span>
+          </p>
         </div>
         <div class="myimage-container">
           <!-- MY IMAGE -->
